5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4312/executions/1791_1594.log
== TEST (2019-05-29 14:12:09) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira um vetor de danos: \n")))

i = 0
peso = 1
acum_danos = 0
while(i < size(vet1):
		acum_danos = vet1[i] * peso
		i = i + 1
print(acum_danos)	
-- ERROR:
File "XXXX", line 7
    while(i < size(vet1):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:12:10) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira um vetor de danos: \n")))

i = 0
peso = 1
acum_danos = 0
while(i < size(vet1):
		acum_danos = vet1[i] * peso
		i = i + 1
print(acum_danos)	
-- ERROR:
File "XXXX", line 7
    while(i < size(vet1):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:12:11) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira um vetor de danos: \n")))

i = 0
peso = 1
acum_danos = 0
while(i < size(vet1):
		acum_danos = vet1[i] * peso
		i = i + 1
print(acum_danos)	
-- ERROR:
File "XXXX", line 7
    while(i < size(vet1):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:12:17) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira um vetor de danos: \n")))

i = 0
peso = 1
acum_danos = 0
while(i < size(vet1):
		acum_danos = vet1[i] * peso
		i = i + 1
print(acum_danos)	
-- ERROR:
File "XXXX", line 7
    while(i < size(vet1):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:12:18) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira um vetor de danos: \n")))

i = 0
peso = 1
acum_danos = 0
while(i < size(vet1):
		acum_danos = vet1[i] * peso
		i = i + 1
print(acum_danos)	
-- ERROR:
File "XXXX", line 7
    while(i < size(vet1):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:12:22) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira um vetor de danos: \n")))

i = 0
peso = 1
acum_danos = 0
while(i < size(vet1)):
		acum_danos = vet1[i] * peso
		i = i + 1
print(acum_danos)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:12:45) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira um vetor de danos: \n")))

i = 0
peso = 1
acum_danos = 0
while(i < size(vet1)):
		acum_danos = (vet1[i] * peso) + 1
		i = i + 1
print(acum_danos)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:13:13) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira um vetor de danos: \n")))

i = 0
peso = 1
acum_danos = 0
while(i < size(vet1)):
		acum_danos = (vet1[i] * peso) + 1
		peso = peso + 1
		i = i + 1
print(acum_danos)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:17:02) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira um vetor de danos: \n")))

i = 0
peso = 1
acum_danos = 0
while(i[i] < size(vet1)):
		acum_danos = (vet1[i] * peso) + 1
		peso = peso + 1
		i = i + 1
print(acum_danos)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:17:29) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira um vetor de danos: \n")))

i = 0
peso = 1
acum_danos = 0
while(i[i] < size(vet1)):
		acum_danos = (vet1[i] * peso) + 1
		peso = peso + 1
		i = i + 1
print(acum_danos)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:19:05) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira um vetor de danos: \n")))

i = 0
ataque = 0
peso = 1
acum_danos = 0
while(i < size(vet1)):
		ataque = vet1[i] * peso
		acum_danos = ataque +1
		peso = peso + 1
		i = i + 1
print(acum_danos)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:19:36) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira um vetor de danos: \n")))

i = 0
ataque = 0
peso = 1
acum_danos = 0
while(i < size(vet1)):
		ataque = vet1[i] * peso[i]
		acum_danos = ataque +1
		peso = peso + 1
		i = i + 1
print(acum_danos)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:20:12) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira um vetor de danos: \n")))

i = 0
ataque = 0
peso = 1
acum_danos = 0
while(i < size(vet1)):
		ataque = vet1[i] * peso
		acum_danos = ataque +1
		peso = vet[i] + 1
		i = i + 1
print(acum_danos)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:20:22) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira um vetor de danos: \n")))

i = 0
ataque = 0
peso = 1
acum_danos = 0
while(i < size(vet1)):
		ataque = vet1[i] * peso
		acum_danos = ataque +1
		peso = vet1[i] + 1
		i = i + 1
print(acum_danos)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:20:33) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira um vetor de danos: \n")))

i = 0
ataque = 0
peso = 1
acum_danos = 0
while(i < size(vet1)):
		ataque = vet1[i] * peso
		acum_danos = ataque +1
		peso = vet1[i]
		i = i + 1
print(acum_danos)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:20:42) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira um vetor de danos: \n")))

i = 0
ataque = 0
peso = 1
acum_danos = 0
while(i < size(vet1)):
		ataque = vet1[i] * peso
		acum_danos = ataque +1
		peso = vet1[i]
		i = i + 1
print(acum_danos)	
-- EXECUTION TIME:
0.419305
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
10
---- user output:
1
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
45
---- user output:
16
-- TEST CASE 3:
---- input:
[2,3]
---- correct output:
8
---- user output:
7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:20:50) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira um vetor de danos: \n")))

i = 0
ataque = 0
peso = 1
acum_danos = 0
while(i < size(vet1)):
		ataque = vet1[i] * peso
		acum_danos = ataque + 1
		peso = vet1[i]
		i = i + 1
print(acum_danos)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:21:20) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira um vetor de danos: \n")))

i = 0
ataque = 0
peso = 1
acum_danos = 0
while(i < size(vet1)):
		ataque = vet1[i] * peso
		acum_danos = ataque + 1
		peso = vet1[i]
		i = i + 1
print(acum_danos)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:23:03) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira um vetor de danos: \n")))

i = 0
ataque = 0
peso = 1
acum_danos = 0
while(i < size(vet1)):
		ataque = (vet1[i] * peso) + 1
		acum_danos = ataque
		peso = vet1[i]
		i = i + 1
print(acum_danos)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:23:18) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira um vetor de danos: \n")))

i = 0
ataque = 0
peso = 1
acum_danos = 0
while(i < size(vet1)):
		ataque = (vet1[i] * peso) + 1
		acum_danos = ataque + 1
		peso = vet1[i]
		i = i + 1
print(acum_danos)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:23:51) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira um vetor de danos: \n")))

i = 0
ataque = 0
peso = 1
acum_danos = 0
while(i < size(vet1)):
		ataque = (vet1[i] * peso) + 1
		peso = vet1[i]
		i = i + 1
print(acum_danos)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:24:14) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira um vetor de danos: \n")))

i = 0
ataque = 0
peso = 1
acum_danos = 0
while(i < size(vet1)):
		ataque = vet1[i] * peso
		acum_danos = ataque +1
		peso = vet[i] + 1
		i = i + 1
print(acum_danos)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:24:33) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira um vetor de danos: \n")))

i = 0
ataque = 0
peso = 1
acum_danos = 0
while(i < size(vet1)):
		ataque = vet1[i] * peso
		acum_danos = ataque +1
		peso = vet1[i] + 1
		i = i + 1
print(acum_danos)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:24:49) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira um vetor de danos: \n")))

i = 0
ataque = 0
peso = 1
acum_danos = 0
while(i < size(vet1)):
		ataque = vet1[i] * peso
		acum_danos = ataque +1
		peso = vet1[i]
		i = i + 1
print(acum_danos)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:24:58) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira um vetor de danos: \n")))

i = 0
ataque = 0
peso = 1
acum_danos = 0
while(i < size(vet1)):
		ataque = vet1[i] * peso
		acum_danos = ataque +1
		peso = vet1[i]
		i = i + 1
print(acum_danos)	
-- EXECUTION TIME:
0.437624
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
10
---- user output:
1
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
45
---- user output:
16
-- TEST CASE 3:
---- input:
[2,3]
---- correct output:
8
---- user output:
7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:25:28) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira um vetor de danos: \n")))

i = 0
ataque = 0
peso = 1
acum_danos = 0
while(i < size(vet1)):
		ataque = vet1[i] * peso + 1
		acum_danos = ataque
		peso = vet1[i]
		i = i + 1
print(acum_danos)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:26:14) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira um vetor de danos: \n")))

i = 0
ataque = 0
peso = 1
acum_danos = 0
while(i < size(vet1)):
		ataque = vet1[i] * vet[1] + 1
		acum_danos = ataque +1
		peso = vet1[i]
		i = i + 1
print(acum_danos)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:27:15) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira um vetor de danos: \n")))

i = 0
ataque = 0
peso = 1
acum_danos = 0
while(i < size(vet1)):
		ataque = vet1[i] * peso
		acum_danos = ataque + 1
		peso = peso[i] + 1
		i = i + 1
print(acum_danos)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:27:29) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira um vetor de danos: \n")))

i = 0
ataque = 0
peso = 1
acum_danos = 0
while(i < size(vet1)):
		ataque = vet1[i] * peso
		acum_danos = ataque + 1
		peso = peso + 1
		i = i + 1
print(acum_danos)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:27:56) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira um vetor de danos: \n")))

i = 0
ataque = 0
peso = 1
acum_danos = 0
while(i < size(vet1)):
		ataque = vet1[i] * peso
		acum_danos = ataque + 1
		peso = vet1 + 1
		i = i + 1
print(acum_danos)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:28:11) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira um vetor de danos: \n")))

i = 0
ataque = 0
peso = 1
acum_danos = 0
while(i < size(vet1)):
		ataque = vet1[i] * peso
		acum_danos = ataque + 1
		peso = size(vet1) + 1
		i = i + 1
print(acum_danos)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:28:40) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira um vetor de danos: \n")))

i = 0
ataque = 0
peso = 1
acum_danos = 0
while(i < size(vet1)):
		ataque = vet1[i] * peso
		acum_danos = ataque + 1
		peso = size(vet1) + 1
		i = i + 1
print(acum_danos)	
-- EXECUTION TIME:
0.415884
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
10
---- user output:
13
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
45
---- user output:
19
-- TEST CASE 3:
---- input:
[2,3]
---- correct output:
8
---- user output:
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:29:46) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira um vetor de danos: \n")))

i = 0
ataque = 0
peso = vet[i]
acum_danos = 0
while(i < size(vet1)):
		ataque = vet1[i] * peso
		acum_danos = ataque + 1
		peso = peso + 1
		i = i + 1
print(acum_danos)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:30:00) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira um vetor de danos: \n")))

i = 0
ataque = 0
peso = vet1[i]
acum_danos = 0
while(i < size(vet1)):
		ataque = vet1[i] * peso
		acum_danos = ataque + 1
		peso = peso + 1
		i = i + 1
print(acum_danos)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:30:52) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira um vetor de danos: \n")))

i = 0
ataque = 0
peso = vet1[i]
acum_danos = 0
while(i < size(vet1)):
		acum_danos = (vet1[i] * peso) + 1
		peso = peso + 1
		i = i + 1
print(acum_danos)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:32:26) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira um vetor de danos: \n")))

i = 0
ataque = 0
peso = vet[i]
acum_danos = 0
while(i < size(vet1)):
		ataque = vet1[i] * peso
		acum_danos = ataque + 1
		peso = vet[i] + 1
		i = i + 1
print(acum_danos)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:32:45) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira um vetor de danos: \n")))

i = 0
ataque = 0
peso = vet[i]
acum_danos = 0
while(i < size(vet1)):
		ataque = vet1[i] * peso
		acum_danos = ataque + 1
		peso = vet1[i] + 1
		i = i + 1
print(acum_danos)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:33:07) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira um vetor de danos: \n")))

i = 0
ataque = 0
peso = vet[i]
acum_danos = 0
while(i < size(vet1)):
		ataque = vet1[i] * peso
		acum_danos = ataque + 1
		peso = vet1[i] + 1
		i = i + 1
print(acum_danos)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:33:13) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira um vetor de danos: \n")))

i = 0
ataque = 0
peso = vet[i]
acum_danos = 0
while(i < size(vet1)):
		ataque = vet1[i] * peso
		acum_danos = ataque + 1
		peso = vet1[i] + 1
		i = i + 1
print(acum_danos)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:34:11) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira um vetor de danos: \n")))

i = 0
ataque = 0
peso = vet[i]
acum_danos = 0
while(i < size(vet1)):
		ataque = vet1[i] * peso
		acum_danos = ataque + 1
		peso = peso[i] + 1
		i = i + 1
print(acum_danos)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:34:36) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira um vetor de danos: \n")))

i = 0
ataque = 0
peso = vet1[i]
acum_danos = 0
while(i < size(vet1)):
		ataque = vet1[i] * peso
		acum_danos = ataque + 1
		peso = vet1[i] + 1
		i = i + 1
print(acum_danos)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:35:34) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira um vetor de danos: \n")))

i = 0
ataque = 0
peso = vet1[i]
acum_danos = 0
while(i < size(vet1)):
		acum_danos = (vet1[i] * peso)
		peso = vet1[i] + 1
		i = i + 1
print(acum_danos)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:37:06) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira um vetor de danos: \n")))

i = 0
ataque = 0
peso = vet1[i]
acum_danos = 0
while(i < size(vet1)):
		ataque = (vet1[i] * peso) + 1
		acum_danos = acum_danos + ataque
		peso = vet1[i] + 1
		i = i + 1
print(acum_danos)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:37:46) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira um vetor de danos: \n")))

i = 0
ataque = 0
peso = vet1[i]
acum_danos = 0
while(i < size(vet1)):
		ataque = vet1[i] * peso
		acum_danos = acum_danos + ataque
		peso = vet1[i] + 1
		i = i + 1
print(acum_danos)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:38:04) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira um vetor de danos: \n")))

i = 0
ataque = 0
peso = vet1[i]
acum_danos = 0
while(i < size(vet1)):
		ataque = vet1[i] * peso
		acum_danos = acum_danos - ataque
		peso = vet1[i] + 1
		i = i + 1
print(acum_danos)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:38:45) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira um vetor de danos: \n")))

i = 0
ataque = 0
peso = 1
acum_danos = 0
while(i < size(vet1)):
		ataque = vet1[i] * peso
		acum_danos = acum_danos + ataque
		peso = peso + 1
		i = i + 1
print(acum_danos)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:38:54) 
-- CODE:
from numpy import*
vet1 = array(eval(input("Insira um vetor de danos: \n")))

i = 0
ataque = 0
peso = 1
acum_danos = 0
while(i < size(vet1)):
		ataque = vet1[i] * peso
		acum_danos = acum_danos + ataque
		peso = peso + 1
		i = i + 1
print(acum_danos)	
-- EXECUTION TIME:
0.46427
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
10
---- user output:
10
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
[2,3]
---- correct output:
8
---- user output:
8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
